# entity-resolution-nlp

./: .gitignore  README.md  calibrate_crossencoder.sh  eval_biencoder.sh  eval_crossencoder.sh  pyproject.toml  run_beto_baseline.sh  run_evaluate_biencoder.sh  run_roberta_bio.sh  train_biencoder_beto.sh  train_biencoder_roberta.sh  train_crossencoder_beto.sh
docs/: Contexto_Consultoria_INER.md  Contexto_Maestro_Proyecto.md  Diccionario_Datos_Econo.md  ElProtocolodeInvestigacion.md  Hallazgos_EDA_INER.md  Metodologia_arquitectura.md  Prompt_EDAs.md  Reporte_BasesdeDatos_INER.md  comandos_proyecto.md  design_decisions.md  entorno_y_dependencias.md
notebooks/: Dic_Datos.ipynb  Duplicados_INER.ipynb  EDA_Comorbilidad.ipynb  EDA_Econo.ipynb  EDA_General.ipynb  EDA_TrabajoSocial.ipynb  Inspect_Dataset.ipynb
scripts/: build_consolidated_json.py  build_data_dictionary.py  calibrate_crossencoder.py  download_model.py  evaluate_crossencoder.py  evaluate_finetuned.py  evaluate_zeroshot.py  measure_token_distribution.py  merge_review_decisions.py  mine_hard_pairs.py  plot_training_curves.py  report_linking_numbers.py  run_dataset.py  run_dataset_v2.py  run_preprocessing.py  run_splitting.py  run_train_biencoder.py  sanity_check_paraphrase.py  show_pair.py  train_crossencoder.py  visualize_embeddings.py
src/record_linkage/: config.py
src/record_linkage/data/: augmentation.py  comparison_methods.py  consolidation.py  dataset.py  dataset_v2.py  preprocessing.py  serialization.py  splitting.py
src/record_linkage/evaluation/: __init__.py  biencoder_eval.py  calibration.py  crossencoder_eval.py  metrics.py
src/record_linkage/models/: biencoder.py  (+1 more)
(+7 files in other folders)
